# r_mini_driver

./: CMakeLists.txt  package.xml
config/: basic.yaml  r_mini.yaml  r_shoulder.yaml  r_wrist.yaml
include/r_mini_driver/: r_mini_hardware_interface.h  r_mini_hardware_interface_pointer.h
launch/: r_mini_class_test.launch  r_mini_driver.launch  test_r_mini_driver_controllers.launch  test_r_mini_driver_interface.launch
src/: .r_mini_hardware_interface.cpp.swp  .r_mini_hardware_interface_pointer.cpp.swp  r_mini_driver_node.cpp  r_mini_driver_pointer_node.cpp  r_mini_hardware_interface.cpp  r_mini_hardware_interface_pointer.cpp  testing_dxl_wb.cpp
